# SlackData

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  grips.json  leashrings.json  manufacturers.json  pyproject.toml  rollers.json  run_loader.py  starterkits.json  treepros.json  tricklinekits.json  webbings.json
frontend/: cypress.config.ts  package-lock.json  package.json
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: compare.cy.ts  filters.cy.ts  gear_cards.cy.ts  gear_detail.cy.ts  gear_listing.cy.ts  isa_certification.cy.ts  manufacturers.cy.ts  navigation.cy.ts  search_sort.cy.ts  url_state.cy.ts
frontend/cypress/support/: commands.ts  gear_types.ts
frontend/src/: App.tsx  index.css
slack_data/: main.py
slack_data/api/routers/: grip_router.py  leashring_router.py  starterkit_router.py  treepro_router.py  tricklinekit_router.py  weblock_router.py
slack_data/load_data/: load_grips.py  load_leashrings.py  load_rollers.py  load_starterkits.py  load_treepros.py  load_tricklinekits.py  load_webbings.py  load_weblocks.py
slack_data/models/: brands.py  bungees.py  grips.py  leashrings.py  ringpadding.py  rollers.py  starterkits.py  treepro.py  tricklinekits.py  webbing.py  weblocks.py
slack_data/utilities/: brand_finder.py  materials.py
tests/: conftest.py  test_brands.py  test_grips.py  test_leashrings.py  test_loaders.py  test_rollers.py  test_starterkits.py  test_treepros.py  test_tricklinekits.py  test_webbings.py  test_weblocks.py
