[project]
name = "slackdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["slack_data*"]
